# esp32_utilities

./: .gitignore  CMakeLists.txt  README.md  build_server_applications.sh
api/: .gitignore  Cargo.toml  startdblocally.sh
api/frontend/: index.html  package-lock.json
api/frontend/src/: App.tsx  global.d.ts
api/frontend/src/Components/: TempHumGraph.tsx
api/frontend/src/Components/GeneralComponents/: SingleDateSelector.tsx
api/frontend/src/Components/SpecificComponents/: DataFetchDateSelection.tsx  TempHumGraph.tsx
api/frontend/src/Contexts/: TemperatureAndHumidityContext.tsx
api/frontend/src/Hooks/: useDataFetch.tsx
api/frontend/src/utils/: constants.ts
api/src/: args.rs  database.rs  error.rs  main.rs  server.rs
data_collection/: Cargo.toml
data_collection/src/: main.rs
include/: dht.c  dht.h  seven_seg.c  seven_seg.h  shift_register.c  shift_register.h  utils.c  utils.h  wifi.c  wifi.h
main/: CMakeLists.txt  main.c
