[package]
name = "local_data_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.6", features = ["macros"] }
clap = { version = "4.5.17", features = ["derive"] }
rusqlite = "0.32.1"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs"] }
