[package]
name = "mqttinrust"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.17", features = ["derive"] }
color-eyre = "0.6.3"
futures = "0.3.30"
mosquitto-rs = "0.11.2"
rusqlite = "0.32.1"
smol = "2.0.1"
tokio = { version = "1.39.3", features = ["full"] }
